--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -14,4 +14,5 @@
     <string name="test_it">Otestovat</string>
     <string name="test_account">Testovaci ucet</string>
     <string name="please_enter_nickname">Prosim zadat nick</string>
+    <string name="retype_password">Heslo znova</string>
 </resources>
