--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,11 +6,12 @@
     <string name="password">Password</string>
     <string name="user_name">User name</string>
     <string name="nick_name">Nick Name</string>
-    <string name="starts_each_minute">Starts each minute</string>
+    <string name="starts_each_minute">Test each (x) minute</string>
     <string name="ok">OK</string>
     <string name="_60">10</string>
     <string name="cancel">Cancel</string>
     <string name="test_it">Test it</string>
     <string name="test_account">Test account</string>
     <string name="please_enter_nickname">Please enter nick name...</string>
+    <string name="retype_password">Retype password</string>
 </resources>
