--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -1,18 +1,20 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" standalone="no"?>
 <resources>
-    <string name="app_name">DatovaSchranka</string>
-    <string name="system_settings">Systémoví nastaveni</string>
+    <string name="account_active">Aktivní</string>
+    <string name="account_in_active">Neaktivní</string>
     <string name="add_new_account">Přidat účet</string>
-    <string name="logger">logování</string>
-    <string name="password">Heslo</string>
-    <string name="user_name">Uživateleské jméno</string>
-    <string name="nick_name">Přezdívka</string>
-    <string name="starts_each_minute">Kazdu minutu</string>
+    <string name="app_name">Datová Schránka</string>
     <string name="cancel">Cancel</string>
-    <string name="_60">10</string>
+    <string name="logger">logování</string>
+    <string name="nick_name">Přezdívka</string>
+    <string name="numEchMinute">10</string>
     <string name="ok">Ok</string>
-    <string name="test_it">Otestovat</string>
-    <string name="test_account">Testovaci ucet</string>
+    <string name="password">Heslo</string>
     <string name="please_enter_nickname">Prosim zadat nick</string>
     <string name="retype_password">Heslo znova</string>
+    <string name="starts_each_minute">Kazdu minutu</string>
+    <string name="system_settings">Systémoví nastaveni</string>
+    <string name="test_account">Testovaci ucet</string>
+    <string name="test_it">Otestovat</string>
+    <string name="user_name">Uživateleské jméno</string>
 </resources>
